CD/DEV/eureka-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: eureka-v0
  name: eureka-v0
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-v0
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: eureka-v0
    spec:
      containers:
        - image: shahravir/eureka:latest
          name: eureka-v0
          resources: {}
---
