CD/DEV/eureka-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eureka-v0
  name: eureka-v0
  namespace: dev
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: bgd
---
