CD/DEV/eureka-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: eureka-v0
  name: eureka-v0
  namespace: dev
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: eureka-v0
    weight: 100
